--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="common_spacing">16dp</dimen>
+    <dimen name="job_spacing">20dp</dimen>
     <dimen name="posts_avatar_size">48dp</dimen>
-    <dimen name="spacing_8dp">8dp</dimen>
-    <dimen name="text_title">18sp</dimen>
+    <dimen name="element_spacing">8dp</dimen>
+    <dimen name="size_text_title">18sp</dimen>
+    <dimen name="background_circle_reg">160dp</dimen>
+    <dimen name="spacing_user_list">4dp</dimen>
+    <dimen name="spaccing_login_reg">40dp</dimen>
 
 
 </resources>
