--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -4,149 +4,181 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/common_spacing"
+    android:padding="@dimen/element_spacing"
     tools:context=".ui.MainActivity">
 
-    <ImageView
-        android:id="@+id/AvatarIV"
-        android:layout_width="@dimen/posts_avatar_size"
-        android:layout_height="@dimen/posts_avatar_size"
-        android:layout_marginBottom="@dimen/common_spacing"
-        android:contentDescription="TODO"
-        android:src="@drawable/ic_account_circle_24dp"
-        app:layout_constraintBottom_toBottomOf="@id/barrier_top"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <TextView
-        android:id="@+id/AuthorTV"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/common_spacing"
-        android:layout_marginEnd="@dimen/common_spacing"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:textSize="@dimen/text_title"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/PublishedTV"
-        app:layout_constraintEnd_toStartOf="@id/MenuIB"
-        app:layout_constraintStart_toEndOf="@id/AvatarIV"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="Albert Ablyaev" />
-
-    <TextView
-        android:id="@+id/PublishedTV"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/common_spacing"
-        android:layout_marginEnd="@dimen/common_spacing"
-        android:layout_marginBottom="@dimen/common_spacing"
-        app:layout_constraintBottom_toBottomOf="@id/barrier_top"
-        app:layout_constraintEnd_toStartOf="@id/MenuIB"
-        app:layout_constraintStart_toEndOf="@id/AvatarIV"
-        app:layout_constraintTop_toBottomOf="@id/AuthorTV"
-        tools:text="12.02.21 13:00" />
-
-    <ImageButton
-        android:id="@+id/MenuIB"
-        style="?attr/materialIconButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/common_spacing"
-        android:contentDescription="TODO"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_menu_vert_24dp" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_top"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="AvatarIV,PublishedTV,MenuIB" />
-
-    <TextView
-        android:id="@+id/ContentTV"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:autoLink="web"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/AttachmentGroup"
-        tools:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/AttachmentGroup"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="AttachmentIV,PlayIB"
-        tools:visibility="visible" />
-
-
-    <ImageView
-        android:id="@+id/AttachmentIV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:contentDescription="TODO"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/ContentTV"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier_top"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_height="200dp"
-        tools:src="@drawable/ic_people_outline_24dp" />
+        app:layout_constraintTop_toTopOf="parent
+">
 
-    <ImageButton
-        android:id="@+id/PlayIB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:contentDescription="TODO"
-        android:src="@drawable/ic_play_80dp"
-        app:layout_constraintBottom_toBottomOf="@id/AttachmentIV"
-        app:layout_constraintEnd_toEndOf="@id/AttachmentIV"
-        app:layout_constraintStart_toStartOf="@id/AttachmentIV"
-        app:layout_constraintTop_toTopOf="@id/AttachmentIV" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/element_spacing">
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_middle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="ContentTV,AttachmentIV" />
-
-    <ImageButton
-        android:id="@+id/RepostIB"
-        style="?attr/materialIconButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:background="@android:color/transparent"
-        android:contentDescription="TODO"
-        app:layout_constraintStart_toEndOf="@id/LikeIB"
-        app:layout_constraintTop_toBottomOf="@id/barrier_middle"
-        app:srcCompat="@drawable/ic_share_24dp" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/AvatarIV"
+                android:layout_width="@dimen/posts_avatar_size"
+                android:layout_height="@dimen/posts_avatar_size"
+                android:layout_marginTop="@dimen/element_spacing"
+                android:layout_marginBottom="@dimen/common_spacing"
+                android:contentDescription="TODO"
+                android:src="@drawable/img_test_avatar"
+                app:layout_constraintBottom_toBottomOf="@id/barrier_top"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-    <ImageButton
-        android:id="@+id/LikeIB"
-        style="?attr/materialIconButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:checkable="true"
-        android:contentDescription="TODO"
-        android:src="@drawable/sel_likes_24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier_middle" />
+            <TextView
+                android:id="@+id/AuthorTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/element_spacing"
+                android:layout_marginEnd="@dimen/element_spacing"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textSize="@dimen/size_text_title"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/LoginTV"
+                app:layout_constraintEnd_toStartOf="@id/MenuIB"
+                app:layout_constraintStart_toEndOf="@id/AvatarIV"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="Albert Ablyaev" />
+
+            <TextView
+                android:id="@+id/LoginTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/element_spacing"
+                app:layout_constraintBottom_toBottomOf="@id/barrier_top"
+                app:layout_constraintEnd_toStartOf="@id/MenuIB"
+                app:layout_constraintStart_toEndOf="@id/AvatarIV"
+                app:layout_constraintTop_toBottomOf="@id/AuthorTV"
+                tools:text="12.02.21 13:00" />
+
+            <ImageButton
+                android:id="@+id/MenuIB"
+                style="?attr/materialIconButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/element_spacing"
+                android:contentDescription="TODO"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_menu_vert_24dp" />
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrier_top"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                app:constraint_referenced_ids="AvatarIV,LoginTV,MenuIB" />
+
+            <TextView
+                android:id="@+id/TextPostTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/common_spacing"
+                android:autoLink="web"
+                android:padding="@dimen/element_spacing"
+                app:layout_constraintBottom_toTopOf="@id/link_post"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/AttachmentIV"
+                tools:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore" />
+
+            <androidx.constraintlayout.widget.Group
+                android:id="@+id/AttachmentGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:constraint_referenced_ids="AttachmentIV,PlayIB"
+                tools:visibility="visible" />
+
+
+            <ImageView
+                android:id="@+id/AttachmentIV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:contentDescription="TODO"
+                android:padding="@dimen/element_spacing"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@id/TextPostTV"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/barrier_top"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:layout_height="200dp"
+                tools:src="@drawable/ic_people_outline_24dp" />
+
+            <ImageButton
+                android:id="@+id/PlayIB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:contentDescription="TODO"
+                android:src="@drawable/ic_play_80dp"
+                app:layout_constraintBottom_toBottomOf="@id/AttachmentIV"
+                app:layout_constraintEnd_toEndOf="@id/AttachmentIV"
+                app:layout_constraintStart_toStartOf="@id/AttachmentIV"
+                app:layout_constraintTop_toTopOf="@id/AttachmentIV" />
+
+            <TextView
+                android:id="@+id/link_post"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/element_spacing"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/TextPostTV"
+                tools:text="https://03www.ru/"
+                tools:visibility="visible" />
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrier_middle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                app:constraint_referenced_ids="TextPostTV,AttachmentIV,link_post" />
+
+            <ImageButton
+                android:id="@+id/RepostIB"
+                style="?attr/materialIconButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/common_spacing"
+                android:background="@android:color/transparent"
+                android:contentDescription="TODO"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/LikeIB"
+                app:layout_constraintTop_toBottomOf="@id/barrier_middle"
+                app:srcCompat="@drawable/ic_share_24dp" />
+
+
+            <ImageButton
+                android:id="@+id/LikeIB"
+                style="?attr/materialIconButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/common_spacing"
+                android:checkable="true"
+                android:contentDescription="TODO"
+                android:src="@drawable/sel_likes_24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/barrier_middle" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
